--- a/ArticleNet/ArticleNet.Tests/ArticleNet.Tests.csproj
+++ b/ArticleNet/ArticleNet.Tests/ArticleNet.Tests.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ArticleNet.Tests</RootNamespace>
     <AssemblyName>ArticleNet.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,11 +53,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticleExtractorTests.cs" />
+    <Compile Include="Extractors\AuthorsExtractorTest.cs" />
     <Compile Include="Extractors\OpenGraphExtractorTest.cs" />
     <Compile Include="Extractors\TitleExtractorTests.cs" />
-    <Compile Include="HtmlDocumentUtils.cs" />
+    <Compile Include="Functional\ArticleExtractorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\TestUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
